# HaoEnglishTeacher

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_audio_filename.py
backend/app/: config.py  main.py
backend/app/api/: attempts.py  evaluate.py  materials.py  process.py  sessions.py
backend/app/db/: database.py
backend/app/models/: __init__.py  attempt.py  material.py  session.py
backend/app/schemas/: attempt.py  evaluation.py  material.py  session.py
backend/app/services/: evaluation.py  suggestion.py  transcription.py  video.py  whisper_similarity.py
backend/app/tasks/: celery_app.py  process_video.py
backend/tests/: test_attempt_schema.py  test_attempts_evaluate.py  test_audio_serve.py  test_evaluation.py  test_material_audio_field.py  test_process_video_audio.py  test_report_sentence_text.py  test_transcription.py  test_video.py  test_whisper_similarity.py
docs/superpowers/plans/: 2026-07-17-shadowing-english-system-plan.md  2026-07-20-p0-bugfixes.md  2026-07-20-p1-shadowing-flow.md
docs/superpowers/specs/: 2026-07-17-shadowing-english-system-design.md  2026-07-20-p0-bugfixes-design.md  2026-07-20-p1-shadowing-flow-design.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MaterialForm.tsx  MaterialList.tsx  PracticeHistory.tsx  ProgressBar.tsx  RecorderPanel.tsx  (+8 more)
(+25 files in other folders)
