[project]
name = "shadowing-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "celery[redis]",
    "redis",
    "yt-dlp",
    "openai-whisper",
    "azure-cognitiveservices-speech",
    "pydantic-settings",
    "httpx",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
